tests/baselines/reference/inheritanceMemberAccessorOverridingMethod.errors.txt
==== tests/cases/compiler/inheritanceMemberAccessorOverridingMethod.ts (4 errors) ====
    class a {
        x() {
            return "20";
        }
    }
    
    class b extends a {
          ~
!!! error TS2416: Class 'b' incorrectly extends base class 'a':
!!! error TS2416:   Types of property 'x' are incompatible:
!!! error TS2416:     Type 'string' is not assignable to type '() => string'.
        get x() {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~
!!! error TS2423: Class 'a' defines instance member function 'x', but extended class 'b' defines it as instance member accessor.
            return "20";
        }
        set x(aValue: string) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        }
    }